# eng_mahine_learning_mlops_2025

Deep Learning Para Aplicações de Inteligência Artificial com Python e C++/: criarPasta.sh.txt
Deep Learning Para Aplicações de Inteligência Artificial com Python e C++/Cap-02/: Prompts-EstudoCaso1.txt
Deep Learning Para Aplicações de Inteligência Artificial com Python e C++/Cap-05/: LEIAME.txt  Projeto1.ipynb  requirements.txt
Deep Learning Para Aplicações de Inteligência Artificial com Python e C++/Cap-21/: CMakeLists.txt  LEIAME.txt
Deep Learning Para Aplicações de Inteligência Artificial com Python e C++/Cap-21/src/: dsadataset.hpp  dsamodelo.hpp  dsatesteunitario.cpp  dsatreino.cpp
Matematica_estatistica_aplicada_para_data_science_Machine_Learning_IA/: Exercicio2 - minha solução.ipynb  Exercicio2-Solucao.ipynb  Exercicio3-Solucao.ipynb  Exercicio4-Solucao.ipynb  Exercicio5-Solucao.ipynb  Exercicio6-Solucao.ipynb  Exercicio7-Solucao.ipynb  Exercicio7.ipynb  Lab3.ipynb  Lab4.ipynb  Lab5-Parte1.ipynb  Lab5-Parte2.ipynb  Lab5-Parte3.ipynb  Lab5-Parte4.ipynb  Lab6.ipynb  Projeto1.ipynb  Projeto2-Final.ipynb  Projeto2-Inicio.ipynb  Projeto3.ipynb
desenvolvimento-e-deploy-de-modelos-de-machine-learning/cap10/: LEIAME.txt  pyproject.toml  requirements.txt
desenvolvimento-e-deploy-de-modelos-de-machine-learning/cap10/src/: dsa_cria_feature_store.py  dsa_explora_dados.py  dsa_salva_modelo.py  dsa_treina_modelo.py  projeto5.py
mlops_e_ciclo_de_vida_de_modelos_de_ml/: Analise de qualidae o sistema de machine learning.txt
(+440 files in other folders)
