[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto5"  
version = "1.0.0"
description = "Projeto 5 - Construção de Feature Store e Engenharia de Atributos no Pipeline de Machine Learning."
authors = [{ name = "Data Science Academy", email = "suporte@datascienceacademy.com.br" }]
license = {text = "MIT"}
requires-python = ">=3.6"

dependencies = [
  "pandas==2.1.4",
  "scikit-learn==1.3.2",
  "matplotlib==3.8.2",
  "seaborn==0.13.1", 
  "joblib==1.3.2",
  "numpy==1.26.3",
  "scipy==1.11.4",
  "pillow==10.2.0",
  "python-dateutil==2.8.2",
  "pytz==2023.3.post1",
  "cycler==0.12.1",
  "fonttools==4.47.0",  
  "kiwisolver==1.4.5",
  "packaging==23.2",
  "pyparsing==3.1.1",
  "six==1.16.0",
  "threadpoolctl==3.2.0",
  "tzdata==2023.4"  
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88  
target-version = ["py36"]
